# FileCounter1

./: CMakeLists.txt  Search_directory.cpp  Search_directory.h  main.cpp
DataContainers/: FinalResults.cpp  FinalResults.h  Work_parameters.cpp  Work_parameters.h
Google_tests/: CMakeLists.txt  hello_test.cpp  mainf_test.cpp
